<resources>
    <string name="app_background">TiElements Background</string>
    <string name="menu_status_bar">Status Bar</string>
    <string name="menu_lock_screen">Lockscreen</string>
    <string name="menu_nav_bar">Navigation Bar</string>
    <string name="menu_recent">Recent</string>
    <string name="menu_animations">Animations</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_buttons">Buttons</string>
    <string name="menu_about">About</string>
    <string name="menu_quick_settings">Quick Settings</string>
    <string name="menu_misc">Misc</string>
    <string name="menu_ambient">Ambient</string>
    <string name="menu_battery">Battery</string>
    <string name="menu_screen">Screen</string>
    <string name="build_tweaks_summary_title">Add Elements in your device</string>
    <string name="who_we_are_desc">
        TitaniumOS is a Custom ROM based on Google Android Open Source Project.This ROM developed with a major focus on system stability and useful features. All this without compromising on the pure Android experience.
    </string>
    <string name="maintainers">Maintainers</string>
    <string name="maintainers_title">Official Maintainers</string>
    <string name="maintainers_summary">Officially supported Devices and Maintainers.</string>
    <string name="github">Github</string>
    <string name="github_description">View our source code</string>
    <string name="telegram">Telegram</string>
    <string name="telegram_description">Subscribe to our Telegram channel</string>
    <string name="paypal">Paypal</string>
    <string name="paypal_description">Support us to add more elements</string>
    <string name="maintainer_description">Maintainer: %1$s</string>
    <string name="loading_devices">Loading devices list...</string>
    <string name="loading_devices_failed">Failed to load devices list</string>
    <string name="devices_list_empty">List is empty, tap the icon to reload</string>
    <string name="reload_list">Reload</string>
    <string name="tielements_title">TiElements</string>
    <string name="tielements_summary_title">It is Titanium Time</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="dlg_ok">OK</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="app_name">TiElements</string>
    <string name="ls_disable_elements">Elements</string>
    <string name="lockscreen_battery_info_title">Charging info</string>
    <string name="lockscreen_battery_info_summary">Display charger max current, voltage, wattage and battery temperature while charging</string>
    <string name="incall_vibration_category">In-call Vibration</string>
    <string name="incall_vibrate_connect_title">Vibrate on Connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on Call Waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on Disconnect</string>
    <string name="hardware_keys_power_category">Power Button</string>
    <string name="powermenu_title">Power Menu</string>
    <string name="powermenu_summary">Customize elements to be displayed in power menu</string>
    <string name="powermenu_reboot_title">Reboot</string>
    <string name="powermenu_advanced_reboot_title">Advanced Reboot</string>
    <string name="powermenu_lockdown">Lockdown</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="powermenu_torch">Flashlight</string>
    <string name="powermenu_category_visibility">Lockscreen options</string>
    <string name="powermenu_lockscreen_title">Visibility on the lockscreen</string>
    <string name="powermenu_lockscreen_summary">Enable the ability to show and use the power menu dialog while on the lockscreen</string>
    <string name="powermenu_ls_reboot_summary">Show the reboot option on the lockscreen</string>
    <string name="powermenu_ls_advanced_reboot_summary">Show the advanced reboot option on the lockscreen</string>
    <string name="powermenu_ls_screenshot_summary">Show the screenshot option on the lockscreen</string>
    <string name="powermenu_ls_torch_summary">Show the torch option on the lockscreen</string>
    <string name="statusbar_ntraffic">Network</string>
    <string name="traffic_title">Network Traffic</string>
    <string name="traffic_summary">Network traffic indicators</string>
    <string name="network_traffic_state_title">Network Traffic</string>
    <string name="network_traffic_state_summary">Show net activity in statusbar or expanded statusbar</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="show_network_traffic_up">Upload</string>
    <string name="show_network_traffic_down">Download</string>
    <string name="show_network_traffic_all">Upload and Download</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>
    <string name="nettraf_font_size">Single Net Font size</string>
    <string name="network_traffic_statusbar">Status bar</string>
    <string name="network_traffic_header">Expanded header</string>
    <string name="network_traffic_location_title">Traffic indicator placement</string>
    <string name="network_traffic_location_summary">Place indicator in either status bar or expanded header (recommended for displays with notch cutouts)</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Overview button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_double_tap_summary">Set double tap action</string>
    <string name="hardware_keys_single_tap_summary">Set single tap action</string>
    <string name="hardware_keys_long_press_summary">Set long press action</string>
    <string name="hardware_keys_single_tap_title">Single tap action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="hardware_keys_category">Hardware keys</string>
    <string name="hardware_keys_disable_title">Disable HW Keys</string>
    <string name="hardware_keys_disable_summary">Toggle to enable disable hw keys</string>
    <string name="backlight_timeout_title">Buttons backlight timeout</string>
    <string name="backlight_timeout_on">Enabled always</string>
    <string name="backlight_timeout_default">1 sec (default)</string>
    <string name="backlight_timeout_3s">3 sec</string>
    <string name="backlight_timeout_5s">5 sec</string>
    <string name="backlight_timeout_10s">10 sec</string>
    <string name="backlight_timeout_15s">15 sec</string>
    <string name="backlight_timeout_20s">20 sec</string>
    <string name="backlight_timeout_30s">30 sec</string>
    <string name="button_brightness_title">Backlight</string>
    <string name="backlight_cat_title">Button Brightness</string>
    <string name="button_backlight_on_touch_only_title">Button touch</string>
    <string name="button_backlight_on_touch_only_summary">Enable backlight with timeout only on button touch</string>
    <string name="button_brightness_sw_title">Enable backlight</string>
    <string name="swap_navigation_keys_title">Swap keys</string>
    <string name="swap_navigation_keys_title_summary">Swap back and recents hardware keys</string>
    <string name="anbi_title">Accidental touch</string>
    <string name="anbi_summary">Prevent interaction with navigation buttons while the screen is being touched</string>
    <string name="volume_title">Volume Rockers</string>
    <string name="volume_summary">Customize settings for volume buttons</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">Long press volume buttons to switch tracks while screen off</string>
    <string name="cursor_section_header">Cursor</string>
    <string name="volume_key_cursor_control_title">Volume key cursor control</string>
    <string name="volume_key_cursor_control_off">Disabled</string>
    <string name="volume_key_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volume_key_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="statusbar_items_category">Icons</string>
    <string name="statusbar_items_title">Statusbar icons</string>
    <string name="statusbar_items_summary">Toggle the visibility of icons in statusbar</string>
    <string name="clock_style_category_title">Clock Settings</string>
    <string name="clock_style_category_summary">Statusbar Clock Tuner</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="ls_unlocking">Unlocking</string>
    <string name="fprint_sucess_vib_title">FP authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate when fingerprint authentication is successful</string>
    <string name="fprint_error_vib_title">FP error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate when fingerprint authentication fails</string>
    <string name="fp_unlock_keystore_title">Force FP authentication</string>
    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot or lockdown</string>
</resources>