<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_lock_screen"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="ls_unlocking"
        android:title="@string/ls_unlocking">

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="fp_unlock_keystore"
            android:title="@string/fp_unlock_keystore_title"
            android:summary="@string/fp_unlock_keystore_summary"
            android:defaultValue="false" />

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fprint_sucess_vib_title"
            android:summary="@string/fprint_sucess_vib_summary"
            android:defaultValue="true" />

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="fingerprint_error_vib"
            android:title="@string/fprint_error_vib_title"
            android:summary="@string/fprint_error_vib_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="ls_disable_elements"
        android:title="@string/ls_disable_elements">

        <com.titanium.support.preferences.SystemSettingSwitchPreference
            android:key="lockscreen_battery_info"
            android:title="@string/lockscreen_battery_info_title"
            android:summary="@string/lockscreen_battery_info_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
