<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/menu_status_bar"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="statusbar_ntraffic"
        android:title="@string/statusbar_ntraffic">

    <Preference
         android:key="network_traffic"
         android:title="@string/traffic_title"
         android:summary="@string/traffic_summary"
         android:fragment="com.titanium.tielements.fragments.NetworkTraffic" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="statusbar_tuner"
        android:title="@string/statusbar_items_category">

    <Preference
            android:title="@string/statusbar_items_title" 
            android:summary="@string/statusbar_items_summary" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
    </Preference>
    </PreferenceCategory>

</PreferenceScreen>
